# itmo-ct-y19

./: .gitignore  .gitmodules  Makefile  README.md  go.mod  lkm_device.c  lkm_example.c  pom.xml  tools-linux.md
.github/ISSUE_TEMPLATE/: problem-request.md
.github/classroom/: autograding.json
.github/workflows/: c-cpp.yml
1/: 101.perl  102.perl  110.perl  203.perl  204.perl  206.perl  301.perl  A.py  B.cpp  B.py  D.py  F.cpp  pom.xml
2/: B.cpp  D.cpp  pom.xml
3/: 10.py  13.py  17.py  18.py  20.py  21.py  27.py  3.py  6.py  8.py  conjugate.h  in_place_lu_decomposition.h  left_triangle_matrix.h  sole_solver_lu.h  sparse_matrix.h
4/: D.cpp  E.cpp  G.cpp  H.cpp
5/: A.cpp  B.cpp  C.cpp  D.cpp
6/: A.cpp  B.cpp  E.cpp
7/: A.cpp  B.cpp  CMakeLists.txt
8/: B.cpp  F.cpp
Introduction/Expressions/: CalculationUtilities.java  Multiply.java  Subtract.java
Introduction/ICPC-quarterfinals/: D.java
Introduction/MNKGame/: Game.java  MnkEngine.java  MoveResult.java
Introduction/Markdown/: Paragraph.java  Strikeout.java  UnorderedList.java
Introduction/Reverse/: PatternMatcher.java  Scanner.java
Introduction/WordStat/: IntListFirst.java
Paradigms/clojure/: expression.clj  linear.clj
Paradigms/javascript/: functionalExpression.js  objectExpression.js
Paradigms/prolog/: primes.pl
algo-ds/: README.md
asm/: README.md  mul.asm
asm/tests/: generate.py  test.sh  test_256.sh
bigint/: README.md  big_integer.cpp  big_integer.h  big_integer_testing.cpp
bigint-optimized/: CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_gmp.cpp  big_integer_gmp.h  big_integer_testing.cpp  cow_wrapper.h  data_cow_guard.h  shared_vector_wrapper.cpp  shared_vector_wrapper.h  small_object.h
cmd/python-obfuscator/: main.go
cpp-intro/: README.md
cpp-intro/bigint/: CMakeLists.txt  big_integer.h  big_integer_testing.cpp
cpp-intro/bigint-optimized/: small_object.h
cpp-intro/vector/: CMakeLists.txt  vector.h
discrete-maths/1/: B.py  C.py  E.cpp
discrete-maths/2/: C.cpp
discrete-maths/3/: 1.py  11.py  12.py  15.py  19.py  24.py  25.py  29.py  4.cpp  9.py
discrete-maths/4/: A.cpp  B.cpp  I.cpp
discrete-maths/6/: G.cpp
discrete-maths/7/: C.cpp
discrete-maths/8/: A.cpp
encoding-theory/: A.cpp  CMakeLists.txt  J.cpp
functional-programming/hw1/: README.md
functional-programming/hw2/: README.md
hw/sem2/: 98.py
hw0/: README.md  hw0.cabal
hw2/: README.md
kernel/: console.c
kotlin-fun-parser/: Makefile  README.md
machine-learning/1-knn/: 00-preprocess.ipynb  01-utility.ipynb  02-knn.ipynb  03-gridsearch.ipynb  knn.py  utils.py
machine-learning/2-linear/: 00-SMAPE.ipynb  01-exact.ipynb  02-sgd.ipynb  03-task.ipynb  exact.py  sgd.py  smape.py
machine-learning/3-svm/: 00-svm.ipynb  kernels.py  svm.py
machine-learning/4-naive/: 00-bayesian.ipynb  bayes.py  ngrammer.py
machine-learning/5-dt/: 01-dt.ipynb  ada_boost.py  decision_tree.py  random_forest.py
machine-learning/6-cnn/: pytorch-cnn.ipynb
machine-learning/7-lstm/: 00-rnn.ipynb
mathstats/pca/: PCA.ipynb
optimization-methods/3/: CMakeLists.txt  benchmark.cpp  full_matrix.h  gauss.h  lu_decomposition.h  profile_matrix.h  tests.cpp
parser-generator/: go.mod
programming-intro/: README.md
regexp/: 104.perl  105.perl  108.perl  111.perl  205.perl  208.perl  209.perl  210.perl  302.perl
src/: AtomicArray.kt  BankImpl.kt  DynamicArrayImpl.kt  FAAQueue.kt  FCPriorityQueue.kt  Solution.kt  SynchronousQueueMS.kt
system-design/visitor_expression_parser/: dune-project
system-design/visitor_expression_parser/lib/: ast.ml  ast.mli  dune  tokenizer.ml  tokenizer.mli  visitors.ml  visitors.mli
term3/lab/1/: CMakeLists.txt  E.cpp  F.cpp  J.cpp  K.cpp  Q.cpp
term4/lab/1/: CMakeLists.txt  K.cpp
tests/: __main__.py  basic.py  constants.py  generic.py  netdir.py  netfile.py  remove.py
tests-internal/: tests-build.sh  tests-valgrind.sh
translation-methods/: README.md
user/: usertests.c
vector/: CMakeLists.txt  main.cpp  vector.h
(+725 files in other folders)
