cmake_minimum_required(VERSION 3.17)
project(1)

set(CMAKE_CXX_STANDARD 17)

add_executable(A AB.cpp)
add_executable(B AB.cpp)
add_executable(C C.cpp)
add_executable(D D.cpp)
add_executable(E E.cpp)
add_executable(F F.cpp)

add_executable(H H.cpp)

add_executable(J J.cpp)
add_executable(K K.cpp)




add_executable(P P.cpp)